# Agentic-AI

./: .env.example  README.md  pyproject.toml  requirements.txt
frontend/: app.js  index.html  styles.css
outputs/api-cr/5ce9b39707/: cr_document.md
outputs/api-cr/ac038455e0/: _meeting.txt  _scope.txt  cr_document.docx
outputs/api-plan/49082a9573/: project_plan.md
outputs/api-plan/84b3e4e64c/: _meeting.txt  _scope.txt
outputs/api-raid/06f4569bc0/: raid_log.xlsx
outputs/api-raid/7a42688d05/: _meeting.txt  raid_log.xlsx
outputs/api-raid/ba29391e7c/: raid_log.xlsx
outputs/api-raid/ca20b7ed71/: _scope.txt  raid_log.xlsx
outputs/cr-demo/: cr_document.md
outputs/cr-live/: jira_items.json
outputs/cr-llm/: cr_document.md  jira_items.json
outputs/pipeline/555bd9f34ab24069/: upload_meeting.txt
outputs/pipeline/5a02f9c17b0d4d44/: meeting_for_agents.txt
outputs/pipeline/78e45aefff1b4f68/: scope_for_agents_placeholder.txt
scripts/: run_cr_agent.py
src/agentic_ai/: __init__.py  config.py  cr_agent.py  cr_agent_llm.py  export_docx.py  jira_client.py  llm_client.py  plan_agent.py  raid_agent.py  smartsheet_client.py
tests/: conftest.py  man_test.py  test_api_main.py  test_collector.py  test_cr_agent.py  test_cr_agent_llm.py  test_cr_agent_llm_required.py  test_documents.py  test_email_input.py  test_jira_client.py  test_meeting_recordings.py  test_pipeline_api.py  test_plan_agent.py  test_plan_agent_llm.py  test_raid_agent.py  test_sharepoint.py  test_smartsheet_client.py
tests/fixtures/: sample_meeting.txt  sample_scope.txt
(+55 files in other folders)
